--- a/mainstlyles.css
+++ b/mainstlyles.css
@@ -16,6 +16,9 @@ header h1
 {
     margin: 0;
     padding: 0;
+    font: normal 100% Arial, Helvetica, sans-serif;
+    line-height: 1.5;
+
 }
 
 .img-circle
@@ -30,6 +33,7 @@ section
     text-align: center;
     width: 80%;
     margin: 10%;
+    height: auto;
 }
 div.pagebreak
 {
@@ -89,4 +93,90 @@ div.contact_box {
     float: right;
     background-color: #25a5a7;
     border: thin black;
+}
+.navbar
+{
+    width: 100%;
+    height: 50px;
+    background: #00ffcc ;
+    text-align: center;
+    position: static;
+
+
+}
+.navbar li
+{
+    list-style: none;
+    margin: 5px;
+    display: inline;
+    width: 30%;
+
+}
+.current
+{
+background-color: white;
+}
+.navbar a
+{
+    font-weight: bold;
+    background: transparent;
+    outline: none;
+    text-decoration: none;
+    text-align: center;
+    height: 25px;
+    width: 30%;
+    border: solid thin black;
+
+}
+a:hover
+{
+    background-color: white;
+}
+a
+{
+    font-weight: bold;
+    background: transparent;
+    outline: none;
+    text-decoration: none;
+    text-align: center;
+}
+.news
+{
+    height: 40%;
+    width: 60%;
+    background-color: aliceblue;
+    border: solid thin black;
+    margin: 5% 20% 5% 20%
+}
+.news  h1
+{
+    font: bold 150% Arial, Helvetica, sans-serif;
+}
+.news  h2
+{
+    font: bold 110% Arial, Helvetica, sans-serif;
+}
+.history
+{
+    height: 40%;
+    width: 95%;
+    background-color: aliceblue;
+    border: solid thin black;
+    margin: 2% 2% 2% 2%;
+}
+.history h1
+{
+    font: bold 150% Arial, Helvetica, sans-serif;
+}
+.history h2
+{
+    font: bold 110% Arial, Helvetica, sans-serif;
+}
+.lefttext
+{
+    text-align: left;
+}
+.righttext
+{
+    text-align: right;
 }
