--- a/main.css
+++ b/main.css
@@ -19,7 +19,7 @@ body {
 } 
 
 #menu {
-	background-color;
+	background-color:;
 	color: #000000;
 	width: 215px;
 	Height: auto;
@@ -55,7 +55,6 @@ table {
 a {
 	color:#000000;
 }
-
 
 li ph {
 	font-size:34px;
@@ -102,10 +101,7 @@ li a.active{
 
 
 .lightbox {
-	/** Default lightbox to hidden */
 	display: none;
-
-	/** Position and style */
 	position: fixed;
 	z-index: 999;
 	width: 100%;
@@ -117,16 +113,60 @@ li a.active{
 }
 
 .lightbox img {
-	/** Pad the lightbox image */
 	max-width: 90%;
 	max-height: 80%;
 	margin-top: 2%;
 }
 
 .lightbox:target {
-	/** Remove default browser outline */
 	outline: none;
-
-	/** Unhide lightbox **/
 	display: block;
+}
+
+div.img {
+    border: 1px solid #ccc;
+}
+
+div.img:hover {
+    border: 1px solid #777;
+}
+
+div.img img {
+	max-width:100%;
+	width: auto;
+    height: auto;
+}
+
+div.desc {
+    padding: 15px;
+    text-align: center;
+}
+
+* {
+    box-sizing: border-box;
+}
+
+.responsive {
+    padding: 0 6px;
+    float: left;
+    width: 24.99999%;
+}
+
+@media only screen and (max-width: 700px){
+    .responsive {
+        width: 49.99999%;
+        margin: 6px 0;
+    }
+}
+
+@media only screen and (max-width: 500px){
+    .responsive {
+        width: 100%;
+    }
+}
+
+.clearfix:after {
+    content: "";
+    display: table;
+    clear: both;
 }
