--- a/main.css
+++ b/main.css
@@ -47,14 +47,21 @@ h1 {
 	
 }
 
-h2{
-	text-align:left;
-}
-
 table {
 	 border:none none ridge none;
 
 }
+
+h3{
+	color:#2A00FF;
+	font-size:26px;
+}
+
+b1{
+	font-size:12px;
+	color:#B70003;
+	text-align:right;
+	}
 
 a {
 	color:#000000;
