--- a/main.css
+++ b/main.css
@@ -19,6 +19,15 @@
     height: 100%;
     display:none;
 }
+#formScreen2{
+   height: 380px;
+    width: 340px;
+    position: relative;
+    z-index: 10;
+    display: none;
+        border: 5px solid #cccccc;
+        border-radius: 10px;
+}
 #formScreen{
     height: 380px;
     width: 340px;
@@ -92,8 +101,7 @@
 	list-style: none;
 	overflow: hidden;
 	float: left;
-	/*Chrom default padding for ul is 40px */
-	padding:0px;
+	padding:  adding:0px;
 	margin:0px;
 }
 #image_slider li{
